--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,9 @@ Section: devel
 Priority: optional
 Maintainer: Sebastian Reichel <sre@debian.org>
 Build-Depends: debhelper (>= 9),
-               valac-0.16
-Standards-Version: 3.9.3
+               libvala-0.20-dev,
+               valac-0.20
+Standards-Version: 3.9.4
 Vcs-Browser: http://git.debian.org/?p=pkg-vala/valabind.git
 Vcs-Git: git://git.debian.org/pkg-vala/valabind.git
 
