--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: valabind
 Section: devel
 Priority: optional
 Maintainer: Sebastian Reichel <sre@debian.org>
+Uploaders: David Martínez Moreno <ender@debian.org>
 Build-Depends: debhelper (>= 9),
                libvala-0.20-dev,
                valac-0.20
@@ -14,7 +15,7 @@ Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends}
 Suggests: gobject-introspection, swig, valac
-Description: convert vapi files to SWIG, C++, GIR or GEAR files
+Description: converts vapi files to SWIG, C++, GIR or GEAR files
  Valabind is a tool to parse vala or vapi files and transform them into SWIG
  interface files, C++ source files, GIR or GEAR.
  .
