--- a/debian/control
+++ b/debian/control
@@ -4,11 +4,11 @@ Priority: optional
 Maintainer: Sebastian Reichel <sre@debian.org>
 Uploaders: David Martínez Moreno <ender@debian.org>
 Build-Depends: debhelper (>= 9),
-               libvala-0.20-dev,
-               valac-0.20
-Standards-Version: 3.9.4
-Vcs-Browser: http://git.debian.org/?p=pkg-vala/valabind.git
-Vcs-Git: git://git.debian.org/pkg-vala/valabind.git
+               valac (>= 0.20)
+Standards-Version: 3.9.5
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-vala/valabind.git
+Vcs-Git: git://anonscm.debian.org/pkg-vala/valabind.git
+Homepage: http://radare.org
 
 Package: valabind
 Architecture: any
