--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,9 @@ Priority: optional
 Maintainer: Sebastian Reichel <sre@debian.org>
 Uploaders: David Martínez Moreno <ender@debian.org>
 Build-Depends: debhelper (>= 9),
-               valac (>= 0.20)
+               libvala-0.20-dev,
+               valac (>= 0.20),
+               quilt
 Standards-Version: 3.9.5
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-vala/valabind.git
 Vcs-Git: git://anonscm.debian.org/pkg-vala/valabind.git
